Changed app description.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: messy_cinema
-description: "A new Flutter project."
+description: "Simuliert die App eines Kinos."
 publish_to: 'none'
 version: 0.1.0
 
